# winphotspot

./: README.md  pyproject.toml
winphotspot/: __init__.py  __main__.py
winphotspot/commands/: setting.py  utils.py
